--- a/stile/estilos.css
+++ b/stile/estilos.css
@@ -175,11 +175,13 @@ nav ul li.nav-item a:hover{
        }
         
         .titulos h2{
-            font-size: 23px;
+            font-size: 25px;
             letter-spacing: 3px;    
             color: white; 
             width: 320px; 
             height: 35px;
+            padding: 0;
+            margin: 0;
                           
         }
         
