imagen de fondo

--- a/stile/estilos.css
+++ b/stile/estilos.css
@@ -1,5 +1,6 @@
 body{
-    background: linear-gradient(to right, #485563, #29323c);
+    background-image: url("../imagenes/fondofin.jpg");
+    
     font-family: 'Fira Sans', sans-serif;
     font-family: 'Noto Serif', serif;
     
